fix: conform Addok adapter to some specs
Similar to GeoJSON adapter spec macros, so could be reused

--- a/lab/package.json
+++ b/lab/package.json
@@ -10,6 +10,7 @@
     "test": "ava -v"
   },
   "dependencies": {
-    "@cadaster/adapter-geojson-fulltext": "*"
+    "@cadaster/adapter-geojson-fulltext": "*",
+    "@turf/turf": "^5.1.6"
   }
 }
