--- a/packages/adapter-geojson-fulltext/package.json
+++ b/packages/adapter-geojson-fulltext/package.json
@@ -24,6 +24,7 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
+    "@cadaster/types": "*",
     "fuse.js": "^3.4.5",
     "ramda": "^0.26.1"
   }
