--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Geocoding and co",
   "scripts": {
     "lint": "standard packages/*/lib/**/*.js",
-    "test": "lerna run test --concurrency 1 --stream --ignore @cadaster/cadaster-lab",
+    "test": "lerna run test --concurrency 1 --stream",
     "test:coverage": "lerna run test:coverage --concurrency 1 --stream",
     "postinstall": "lerna bootstrap --hoist"
   },
