--- a/packages/union-type/package.json
+++ b/packages/union-type/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "union-type",
-  "version": "0.4.1",
+  "name": "@cadaster/union-type",
+  "version": "0.0.1",
   "description": "Union types for JavaScript",
-  "main": "union-type.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
@@ -11,30 +11,19 @@
   },
   "devDependencies": {
     "babel": "^5.8.21",
-    "browserify": "^10.2.4",
-    "mocha": "^2.3.4",
-    "xyz": "0.5.x"
+    "mocha": "^2.5.3"
   },
   "scripts": {
-    "build": "browserify -s unionType ./union-type.js -o dist/union-type.js",
-    "release-major": "xyz --repo git@github.com:paldepind/union-type.git --increment major",
-    "release-minor": "xyz --repo git@github.com:paldepind/union-type.git --increment minor",
-    "release-patch": "xyz --repo git@github.com:paldepind/union-type.git --increment patch",
-    "test": "mocha --compilers js:babel/register"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/paldepind/union-type-js.git"
+    "url": "git+https://github.com/cadaster/cadaster.git"
   },
   "keywords": [
     "union",
     "type",
     "adt"
   ],
-  "author": "Simon Friis Vindum",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/paldepind/union-type-js/issues"
-  },
-  "homepage": "https://github.com/paldepind/union-type-js#readme"
+  "license": "MIT"
 }
