--- a/packages/api-graphql/package.json
+++ b/packages/api-graphql/package.json
@@ -7,7 +7,7 @@
     "test": "ava -v"
   },
   "dependencies": {
-    "@cadaster/adapter-geojson-fulltext": "*",
+    "@cadaster/adapter-mock": "*",
     "@cadaster/adapter-esri": "*",
     "@cadaster/adapter-addok": "*",
     "apollo-server": "^2.5.0",
