--- a/packages/facade-geocoder/package.json
+++ b/packages/facade-geocoder/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@cadaster/adapter-addok": "*",
     "@cadaster/adapter-esri": "*",
-    "@cadaster/adapter-geojson-fulltext": "*",
+    "@cadaster/adapter-mock": "*",
     "@cadaster/adapter-opencage": "*"
   }
 }
