--- a/packages/adapter-mock/package.json
+++ b/packages/adapter-mock/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@cadaster/facade-geocoder",
+  "name": "@cadaster/adapter-mock",
   "version": "0.0.0",
   "private": true,
-  "description": "Configurable facade for business logic",
+  "description": "GeoJSON Adapter w/ full-text search",
   "author": "Miro <miro.ter.seri@gmail.com>",
-  "homepage": "https://github.com/cadaster/cadaster/tree/master/packages/facade-geocoder",
+  "homepage": "https://github.com/cadaster/cadaster/tree/master/packages/adapter-mock",
   "license": "MIT",
   "main": "index.js",
   "repository": {
@@ -20,13 +20,13 @@
     "url": "https://github.com/cadaster/cadaster/issues"
   },
   "devDependencies": {
+    "@cadaster/mock-features-distinct-places": "*",
     "ava": "^2.0.0",
     "nyc": "^14.1.1"
   },
   "dependencies": {
-    "@cadaster/adapter-addok": "*",
-    "@cadaster/adapter-esri": "*",
-    "@cadaster/adapter-mock": "*",
-    "@cadaster/adapter-opencage": "*"
+    "@cadaster/types": "*",
+    "fuse.js": "^3.4.5",
+    "ramda": "^0.26.1"
   }
 }
