--- a/packages/mock-features-distinct-places/package.json
+++ b/packages/mock-features-distinct-places/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@cadaster/adapter-geojson-fulltext",
+  "name": "@cadaster/mock-features-distinct-places",
   "version": "0.0.0",
   "private": true,
-  "description": "GeoJSON Adapter w/ full-text search",
+  "description": "Hand-made list of places formatted as GeoJSON features.",
   "author": "Miro <miro.ter.seri@gmail.com>",
-  "homepage": "https://github.com/cadaster/cadaster/tree/master/packages/adapter-geojson-fulltext",
+  "homepage": "https://github.com/cadaster/cadaster/tree/master/packages/mock-features-distinct-places",
   "license": "MIT",
   "main": "index.js",
   "repository": {
@@ -22,10 +22,5 @@
   "devDependencies": {
     "ava": "^2.0.0",
     "nyc": "^14.1.1"
-  },
-  "dependencies": {
-    "@cadaster/types": "*",
-    "fuse.js": "^3.4.5",
-    "ramda": "^0.26.1"
   }
 }
