chore: lerna hoist deps by default

--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,9 @@
     "config/*"
   ],
   "command": {
+    "bootstrap": {
+      "hoist": true
+    },
     "publish": {
       "conventionalCommits": true
     },
