--- a/packages/adapter-addok/package.json
+++ b/packages/adapter-addok/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cadaster/adapter-addok",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "description": "ADdok Adapter",
   "author": "Miro <miro.ter.seri@gmail.com>",
@@ -16,7 +16,7 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
-    "@cadaster/types": "*",
+    "@cadaster/types": "^0.1.0",
     "ramda": "^0.26.1"
   }
 }
