--- a/packages/adapter-mock/package.json
+++ b/packages/adapter-mock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cadaster/adapter-mock",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "description": "GeoJSON Adapter w/ full-text search",
   "author": "Miro <miro.ter.seri@gmail.com>",
@@ -12,12 +12,12 @@
     "test:watch": "ava -vw"
   },
   "devDependencies": {
-    "@cadaster/mock-features-distinct-places": "*",
+    "@cadaster/mock-features-distinct-places": "^0.1.0",
     "ava": "^2.0.0",
     "nyc": "^14.1.1"
   },
   "dependencies": {
-    "@cadaster/types": "*",
+    "@cadaster/types": "^0.1.0",
     "fuse.js": "^3.4.5",
     "ramda": "^0.26.1"
   }
