--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cadaster/types",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "description": "A sample package",
   "author": "Miro <miro.ter.seri@gmail.com>",
@@ -12,7 +12,7 @@
     "test:watch": "ava -vw"
   },
   "dependencies": {
-    "@cadaster/union-type": "*"
+    "@cadaster/union-type": "^0.1.0"
   },
   "devDependencies": {
     "ava": "^2.0.0",
